fix ballon z-index

--- a/css/main.less
+++ b/css/main.less
@@ -507,6 +507,7 @@ nav#category-nav {
 	.balloon {
 		display: block;
 		position: absolute;
+		z-index: 1000;
 		opacity: 0;
 		overflow: hidden;
 		width: 0;
